# VictoryKit

./: .env.example  .env.phase2.example  .gitignore  CODESPACES-QUICKSTART.md  DEPLOY.md  DEPLOYMENT-FIX.md  DEPLOYMENT-README.md  DEV-SERVER-GUIDE.md  EXECUTIVE-SUMMARY.md  LICENSE  PHASE-1-COMPLETE.md  PHASE-1-STATUS.md  README.md  TECH-STACK.md  TOOL-13-ACCESSCONTROL-TODOS.md  TOOL-14-ENCRYPTIONMANAGER-TODOS.md  TOOL-15-CRYPTOVAULT-TODOS.md  TOOL-16-NETWORKMONITOR-TODOS.md  TOOL-17-AUDITTRAIL-TODOS.md  TOOL-18-THREATMODEL-TODOS.md  TOOL-19-RISKASSESS-TODOS.md  TOOL-20-SECURITYSCORE-TODOS.md  clean-tool44.sh  clean-tool45.sh  commit-all.sh  commit-push.sh  commitlint.config.js  deploy-complete.sh  deploy-config.sh  deploy-ec2.sh  deploy-full.sh  deploy-production.sh  diagnose-502.sh  docker-compose.phase1.yml  docker-compose.phase2.yml  docker-compose.prod.yml  ecosystem.config.js  fix-ec2.sh  fix-vulnerabilities.sh  generated_tool_env_block.txt  (+11 more)
.devcontainer/: devcontainer.json
.qlty/: qlty.toml
.trunk/: trunk.yaml
backend/: README.md
backend/tools/37-MobileSecurity/ml-engine/: pyproject.toml
docs/: 00-PROJECT-OVERVIEW.md  01-BASE-ARCHITECTURE.md  02-FRONTEND-ARCHITECTURE.md  03-BACKEND-ARCHITECTURE.md  04-DATABASE-ARCHITECTURE.md  05-LLM-INTEGRATION.md  06-FOLDER-STRUCTURE.md  07-VISUAL-DIAGRAMS.md  08-QUICK-REFERENCE.md  09-CITY-ARCHITECTURE.md  10-BACKEND-DETAILED-IMPLEMENTATION.md  BUILD-GUIDE.md  FIREWALLAI-ENHANCEMENT-PLAN.md  FRAUDGUARD.md  HOMEPAGE-ARCHITECTURE.md  INTEGRATION-ROLLOUT-PLAN.md  PHASE-1-CENTRAL-GRID.md  PHASE-2-FIRST-TOOL.md  README.md  (+8 more)
(+3783 files in other folders)
