[project]
name = "fraudguard-ml-engine"
version = "1.0.0"
description = "FraudGuard ML Engine - Fraud Detection Machine Learning Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "tensorflow>=2.15.0",
    "joblib>=1.3.2",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=23.12.1",
    "ruff>=0.1.11",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']
